header img doesn't resize with page

--- a/index.html
+++ b/index.html
@@ -4,51 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>A Work in Progress</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="first">
         <div class="top">
-            <div class="left">Logo</div>
+            <div class="left">A Work in Progress</div>
             <div class="right">
                 <ul>
-                    <li><a href="google.com">Link 1</a></li>
-                    <li><a href="google.com">Link 2</a></li>
-                    <li><a href="google.com">Link 3</a></li>
+                    <li><a href="google.com">About</a></li>
+                    <li><a href="google.com">Testimonials</a></li>
+                    <li><a href="google.com">Sign up</a></li>
                 </ul>
             </div>
         </div>
         <div class="hero-text">
             <div class="left1">
-                <div class="main-text">This Website is awesome</div>
-                <div class="text">Subtext under main title.</div>
+                <div class="main-text">This Website is awesome?</div>
+                <div class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <div class="button1"><button class="button">Sign up</button></div>
             </div>
-            <img class="media" alt="some picture here">
+            <div class="header-img">
+                <img src="./images/wip.jpg" alt="some picture here">
+            </div>
         </div>
     </div>
     <div class="title">Some random information</div>
         <div class="second">
 
             <div class="info">
-                <img class="media2" alt="graphic">
-                <div class="text2">This is some subtext for the above image/illustration</div>
+                <img class="media2" src="./images/ripple.jpg" alt="graphic">
+                <div class="text2">This is just a really cool water picture I liked. Nothing else to it, lol.</div>
             </div>
 
             <div class="info">
-                <img class="media2" alt="graphic">
-                <div class="text2">This is some subtext for the above image/illustration</div>
+                <img class="media2" src="./images/city.jpg" alt="graphic">
+                <div class="text2">This is like an abandoned building that I thought was rad, lol.</div>
             </div>
 
             <div class="info">
-                <img class="media2" alt="graphic">
-                <div class="text2">This is some subtext for the above image/illustration</div>
+                <img class="media2" src="./images/tree1.jpg"alt="graphic">
+                <div class="text2">This is a tree, as you can see, lol.</div>
             </div>
 
             <div class="info">
-                <img class="media2" alt="graphic">
-                <div class="text2">This is some subtext for the above image/illustration</div>
+                <img class="media2" src="./images/tree2.jpg" alt="graphic">
+                <div class="text2">This is a another tree, lol.</div>
             </div>
         </div>
         <div class="third">
